Fix align of Tabs

--- a/style/tabs.css
+++ b/style/tabs.css
@@ -1,13 +1,15 @@
 .tab-form{
   display: flex;
-  justify-content: space-around;
 }
 .tab-option{
   font-weight: bold;
   padding: 1rem;
+  text-align: center;
+  flex: 1;
   color: var(--dark-passive-color);
   transition: color .15s linear;
   cursor: pointer;
+  user-select: none;
 }
 .tab-option:hover{
   color: var(--ink-color);
